# dead

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  README.md  azure-pipelines.yml  dead.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
tests/: dead_test.py  test_dead.py  visitor_test.py
