[metadata]
name = dead
version = 0.0.6
description = dead simple python dead code detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/dead
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = dead
install_requires = identify
python_requires = >=3.6

[options.entry_points]
console_scripts =
    dead=dead:main

[bdist_wheel]
universal = True
